--- a/notebooks_tdm/summary.ipynb
+++ b/notebooks_tdm/summary.ipynb
@@ -199,12 +199,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[779,\n",
+       " 336,\n",
+       " 376,\n",
+       " 542,\n",
+       " 301,\n",
+       " 640,\n",
+       " 497,\n",
+       " 736,\n",
+       " 347,\n",
+       " 552,\n",
+       " 281,\n",
+       " 487,\n",
+       " 271,\n",
+       " 397,\n",
+       " 387,\n",
+       " 536,\n",
+       " 458,\n",
+       " 47,\n",
+       " 112,\n",
+       " 268,\n",
+       " 108,\n",
+       " 443,\n",
+       " 94,\n",
+       " 503,\n",
+       " 166,\n",
+       " 646,\n",
+       " 540,\n",
+       " 689,\n",
+       " 28,\n",
+       " 64,\n",
+       " 816,\n",
+       " 451,\n",
+       " 732,\n",
+       " 60,\n",
+       " 454,\n",
+       " 245,\n",
+       " 440,\n",
+       " 406,\n",
+       " 2,\n",
+       " 413,\n",
+       " 394,\n",
+       " 143,\n",
+       " 140,\n",
+       " 868,\n",
+       " 377,\n",
+       " 228,\n",
+       " 766,\n",
+       " 68,\n",
+       " 110,\n",
+       " 412,\n",
+       " 308,\n",
+       " 695,\n",
+       " 104,\n",
+       " 25,\n",
+       " 313,\n",
+       " 481,\n",
+       " 583,\n",
+       " 77,\n",
+       " 231,\n",
+       " 470,\n",
+       " 426,\n",
+       " 76,\n",
+       " 191,\n",
+       " 33,\n",
+       " 269,\n",
+       " 423,\n",
+       " 556,\n",
+       " 782,\n",
+       " 936,\n",
+       " 655,\n",
+       " 967,\n",
+       " 482,\n",
+       " 329,\n",
+       " 157,\n",
+       " 433,\n",
+       " 553,\n",
+       " 768,\n",
+       " 647,\n",
+       " 430,\n",
+       " 743,\n",
+       " 710,\n",
+       " 221,\n",
+       " 551,\n",
+       " 256,\n",
+       " 359,\n",
+       " 460,\n",
+       " 146,\n",
+       " 246,\n",
+       " 128,\n",
+       " 11,\n",
+       " 591,\n",
+       " 17,\n",
+       " 713,\n",
+       " 203,\n",
+       " 307,\n",
+       " 389,\n",
+       " 135,\n",
+       " 811,\n",
+       " 368,\n",
+       " 884,\n",
+       " 333,\n",
+       " 576,\n",
+       " 267,\n",
+       " 300,\n",
+       " 167,\n",
+       " 342,\n",
+       " 475,\n",
+       " 139,\n",
+       " 130,\n",
+       " 335,\n",
+       " 704,\n",
+       " 653,\n",
+       " 761,\n",
+       " 260,\n",
+       " 450,\n",
+       " 343,\n",
+       " 98,\n",
+       " 7,\n",
+       " 701,\n",
+       " 499,\n",
+       " 31,\n",
+       " 522,\n",
+       " 199,\n",
+       " 349,\n",
+       " 72,\n",
+       " 80,\n",
+       " 26,\n",
+       " 296,\n",
+       " 164,\n",
+       " 48,\n",
+       " 122,\n",
+       " 994,\n",
+       " 9,\n",
+       " 326,\n",
+       " 456,\n",
+       " 152,\n",
+       " 40,\n",
+       " 207,\n",
+       " 153,\n",
+       " 249,\n",
+       " 853,\n",
+       " 111,\n",
+       " 792,\n",
+       " 999,\n",
+       " 69,\n",
+       " 201,\n",
+       " 289,\n",
+       " 882,\n",
+       " 447,\n",
+       " 126,\n",
+       " 997,\n",
+       " 468,\n",
+       " 894,\n",
+       " 669,\n",
+       " 530,\n",
+       " 520,\n",
+       " 694,\n",
+       " 217,\n",
+       " 383,\n",
+       " 120,\n",
+       " 192,\n",
+       " 119,\n",
+       " 407,\n",
+       " 318,\n",
+       " 253,\n",
+       " 115,\n",
+       " 399,\n",
+       " 145,\n",
+       " 176,\n",
+       " 608,\n",
+       " 29,\n",
+       " 705,\n",
+       " 507,\n",
+       " 508,\n",
+       " 175,\n",
+       " 21,\n",
+       " 361,\n",
+       " 852,\n",
+       " 610,\n",
+       " 6,\n",
+       " 261,\n",
+       " 382,\n",
+       " 73,\n",
+       " 70,\n",
+       " 379,\n",
+       " 295,\n",
+       " 239,\n",
+       " 155,\n",
+       " 265,\n",
+       " 502,\n",
+       " 727,\n",
+       " 483,\n",
+       " 589,\n",
+       " 42,\n",
+       " 224,\n",
+       " 842,\n",
+       " 370,\n",
+       " 525,\n",
+       " 138,\n",
+       " 255,\n",
+       " 490,\n",
+       " 92,\n",
+       " 52,\n",
+       " 681,\n",
+       " 674,\n",
+       " 910,\n",
+       " 227,\n",
+       " 579,\n",
+       " 279,\n",
+       " 455,\n",
+       " 668,\n",
+       " 96,\n",
+       " 550,\n",
+       " 680,\n",
+       " 121,\n",
+       " 484,\n",
+       " 932,\n",
+       " 367,\n",
+       " 285,\n",
+       " 391,\n",
+       " 509,\n",
+       " 356,\n",
+       " 682,\n",
+       " 141,\n",
+       " 163,\n",
+       " 54,\n",
+       " 518,\n",
+       " 625,\n",
+       " 457,\n",
+       " 905,\n",
+       " 53,\n",
+       " 531,\n",
+       " 417,\n",
+       " 229,\n",
+       " 592,\n",
+       " 106,\n",
+       " 452,\n",
+       " 847,\n",
+       " 464,\n",
+       " 568,\n",
+       " 461,\n",
+       " 273,\n",
+       " 280,\n",
+       " 748,\n",
+       " 845,\n",
+       " 935]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_longP"
+   ]
   },
   {
    "cell_type": "code",
